--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@ if(window.attachEvent){
 <div class="bg-text">
 
   <h1>Twitter Sentiment Analysis</h1>
-  <h3>The only thing which makes human apart from machines is the <i>emotions</i>.Humans express their emotions in lots of ways.Sometimes we uses our facial expression,sometimes we uses our voice,actions and sometimes through text.<br>Today we will use text to know the emotions.We will predict the sentiment of text.Lets do it</h3>
+  <h4>The only thing which makes human apart from machines is the <i>emotions</i>.Humans express their emotions in lots of ways.Sometimes we uses our facial expression,sometimes we uses our voice,actions and sometimes through text.<br></h4>
 
     <form method="POST"> 
         <label for="EMAIL ID">Enter your tweet here:</label><br> 
